menu-desktop-for-dashboard

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,7 @@
 @import "layouts/employeeform";
 @import "layouts/flash_cards";
 @import "layouts/navbar_dashboard";
+@import "layouts/navbar_dashboard_mobile";
 // Pages
 @import "pages/home_index";
 @import "pages/dashboard";
