--- a/app/assets/stylesheets/layouts/_navbar_dashboard.scss
+++ b/app/assets/stylesheets/layouts/_navbar_dashboard.scss
@@ -1,146 +1,105 @@
-html,
-:root {
-    --color-white: #fff;
-    --size-btn-collapse: 10.5rem;
-    --time-animation: 0.3s;
-}
-
-.nav-main {
-    height: 59px;
-    background-color: #FAFAFA;
-    padding: 0.6rem 1.2rem;
-    display: flex;
-    align-items: center;
-    position: relative;
-}
-
-.profilebox {
-    background-color: #FAFAFA;
-    border-radius: 0 1rem 1rem 0;
-    padding: 0.4rem;
-    padding-left: 1.5rem;
-    color: #FAFAFA;
-    z-index: 1;
-    margin-left: -1rem;
-    transform: scaleX(0);
-    transition: transform var(--time-animation);
-    transform-origin: left;
-}
-
-.profilebox__link-item {
-    // margin: 0 1rem;
-}
-
-.nav-main__btn-collapse:checked~.profilebox {
-    transform: scaleX(1);
-}
-
-.profile {
-    position: relative;
-    border-radius: 80px 80px 80px 80px;
-    border: 1px solid #dddddd;
-    left: 10px;
-    width: 36px;
-    height: 36px;
-}
-
-.nav-main__btn-collapse-icon {
-    --size: 45px;
-    width: var(--size);
-    height: var(--size);
-    border-radius: 50%;
-    background-color: #FAFAFA;
-    padding: 0.6rem 0.3rem;
-    z-index: 10;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.icon-nav {
-    display: block;
-    width: 60%;
-    height: 2px;
-    background-color: #B2B2B2;
-    transition: transform var(--time-animation);
-}
-
-.nav-main__btn-collapse {
-    display: none;
-}
-
-.nav-main__btn-collapse:checked~.nav-main__btn-collapse-icon {
-    background-color: #FAFAFA;
-}
-
-.nav-main__btn-collapse:checked+.nav-main__btn-collapse-icon .icon-nav:first-child {
-    transform: translateY(0.5em) rotate(45deg);
-}
-
-.nav-main__btn-collapse:checked+.nav-main__btn-collapse-icon .icon-nav:nth-of-type(2) {
-    transform: scale(0);
-}
-
-.nav-main__btn-collapse:checked+.nav-main__btn-collapse-icon .icon-nav:last-child {
-    transform: translateY(-0.5em) rotate(-45deg);
-}
-
-.nav-main__btn-collapse-bg {
-    height: 100%;
-    width: var(--size-btn-collapse);
-    background-color: #FAFAFA;
-    position: absolute;
-    left: 0;
-    top: 0;
-    transform: translateX(calc(var(--size-btn-collapse)/2 * -1));
-    transition: transform var(--time-animation);
-}
-
-.nav-main__btn-collapse:checked~.nav-main__btn-collapse-bg {
-    transform: translateX(0);
-    background-color: #FAFAFA;
-    border-right: 2px solid #ededed;
-}
-
-.nav-main__menu {
-    position: absolute;
-    left: 0;
-    top: 100%;
-    display: flex;
-    flex-direction: column;
-    width: var(--size-btn-collapse);
-    height: calc(100vh - 65px);
-    background-color: #FAFAFA;
-    padding: 2rem;
-    font-weight: 300;
-    box-shadow: var(--box-shadow);
-    color: #fff;
-    transform: scaleY(0);
-    transition: transform var(--time-animation);
-    transform-origin: top;
-    border-right: 2px solid #ededed;
-}
-
-.nav-main__btn-collapse:checked~.nav-main__menu {
-    transform: scaleY(1);
-}
-
-.link-item {
-    margin-bottom: 2rem;
-}
-
-.tittle {
-    color: #B2B2B2
-}
-
-.button-styles {
-    color: #B2B2B2;
-    border: #B2B2B2;
-    background-color: #FAFAFA;
-}
-
-.main_menu {
-    color: #B2B2B2;
+@media (min-width: 501px) {
+    html,
+     :root {
+        --color-white: #fff;
+        --size-btn-collapse: 11rem;
+        --time-animation: 0.3s;
+    }
+    .nav-main {
+        height: 59px;
+        background-color: #fff;
+        padding: 0.6rem 1.2rem;
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
+    .profilebox {
+        display: flex;
+        position: relative;
+        align-items: center;
+        background-color: #FAFAFA;
+        border-radius: 0 1rem 1rem 0;
+        padding: 1.6rem;
+        color: #FAFAFA;
+    }
+    .profilebox__link-item {
+        margin: 0 1rem;
+    }
+    .profile {
+        position: relative;
+        border-radius: 80px 80px 80px 80px;
+        border: 1px solid #dddddd;
+        left: 10px;
+        width: 36px;
+        height: 36px;
+    }
+    .icon-nav {
+        display: block;
+        width: 60%;
+        height: 2px;
+        background-color: #B2B2B2;
+        transition: transform var(--time-animation);
+    }
+    .nav-main__btn-collapse {
+        display: none;
+    }
+    .nav-main__btn-collapse-bg {
+        height: 100%;
+        width: var(--size-btn-collapse);
+        background-color: #FAFAFA;
+        position: absolute;
+        left: 0;
+        top: 0;
+        border-right: 2px solid #ededed;
+    }
+    .nav-main__menu {
+        position: absolute;
+        left: 0;
+        top: 100%;
+        display: flex;
+        flex-direction: column;
+        width: var(--size-btn-collapse);
+        height: 100vh;
+        background-color: #FAFAFA;
+        padding: 2rem;
+        font-weight: 300;
+        box-shadow: var(--box-shadow);
+        color: #fff;
+        transform: scaleY(1);
+        transform-origin: top;
+        border-right: 2px solid #ededed;
+        margin-bottom: 2px solid #ededed;
+        align-items: center;
+    }
+    .link-item {
+        margin-bottom: 2rem;
+    }
+    .tittle {
+        color: #B2B2B2
+    }
+    .button-styles {
+        font-weight: 400;
+        color: #B2B2B2;
+        border: #B2B2B2;
+        background-color: #FAFAFA;
+    }
+    .buttonselected {
+        font-weight: 400;
+        color: #FF5151;
+        border: #B2B2B2;
+        background-color: #FAFAFA;
+    }
+    .main_menu {
+        color: #B2B2B2;
+    }
+    .footer_desk {
+        transform: scaleY(0);
+        transform: scaleX(0);
+        align-items: center;
+        @media (min-width: 501px) {
+            padding-top: 2rem;
+            transform: scaleY(1);
+            align-items: center;
+        }
+    }
 }
