mobile and desktop footer for dashboard

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -100,6 +100,7 @@
       <div class="d-flex fd-row justify-space-between mx-auto mt-2">
         <%= paginate @employees %>
       </div>
+      <%= image_tag("Footer.png", :alt => "Braightcoders", class:"footer") %>
       </div>
 
       
