--- a/app/assets/stylesheets/layouts/_navbar_dashboard.scss
+++ b/app/assets/stylesheets/layouts/_navbar_dashboard.scss
@@ -7,7 +7,7 @@
     }
     .nav-main {
         height: 59px;
-        background-color: #fff;
+        background-color: var(--color-white);
         padding: 0.6rem 1.2rem;
         display: flex;
         align-items: center;
@@ -17,13 +17,16 @@
         display: flex;
         position: relative;
         align-items: center;
-        background-color: #FAFAFA;
+        background-color: var(--color-white);
         border-radius: 0 1rem 1rem 0;
-        padding: 1.6rem;
         color: #FAFAFA;
     }
     .profilebox__link-item {
         margin: 0 1rem;
+        img{
+            margin-top: 1rem;
+            margin-left: 5rem;
+        }
     }
     .profile {
         position: relative;
@@ -46,30 +49,29 @@
     .nav-main__btn-collapse-bg {
         height: 100%;
         width: var(--size-btn-collapse);
-        background-color: #FAFAFA;
+        background-color: #FfFfFf;
         position: absolute;
         left: 0;
         top: 0;
+        width: 272px;
         border-right: 2px solid #ededed;
     }
     .nav-main__menu {
         position: absolute;
+        width: 272px;
         left: 0;
         top: 100%;
         display: flex;
         flex-direction: column;
-        width: var(--size-btn-collapse);
         height: 100vh;
-        background-color: #FAFAFA;
         padding: 2rem;
         font-weight: 300;
         box-shadow: var(--box-shadow);
-        color: #fff;
+        color: var(--color-white);
         transform: scaleY(1);
         transform-origin: top;
         border-right: 2px solid #ededed;
         margin-bottom: 2px solid #ededed;
-        align-items: center;
     }
     .link-item {
         margin-bottom: 2rem;
@@ -81,13 +83,27 @@
         font-weight: 400;
         color: #B2B2B2;
         border: #B2B2B2;
-        background-color: #FAFAFA;
+        background-color: #ffffff;
+        font-size: 16px;
+        font-size: var(--font-family-poppins);
     }
+
+    .link-title{
+        text-transform: uppercase;
+        color: black;
+        font-weight: 600;
+        font-size: 20px;
+    }   
+
+    .timer-link{
+        width:100px
+    }
+
     .buttonselected {
         font-weight: 400;
         color: #FF5151;
         border: #B2B2B2;
-        background-color: #FAFAFA;
+        background-color: #ffffff;
     }
     .main_menu {
         color: #B2B2B2;
@@ -99,7 +115,24 @@
         @media (min-width: 501px) {
             padding-top: 2rem;
             transform: scaleY(1);
-            align-items: center;
+            margin: auto;
         }
+    }
+    .footer_desk__link-item--credits{
+        display: flex;
+        flex-direction: column;
+        color: rgb(141, 138, 138);
+        font-size: 12px;
+        font-family: var(--font-family-poppins);
+        font-weight: 400;
+        div{
+            p{
+
+            }
+        }
+    }
+
+    .footer{
+        display: none;
     }
 }
