--- a/app/views/dashboard/_navbar.html.erb
+++ b/app/views/dashboard/_navbar.html.erb
@@ -10,28 +10,39 @@
             
             <!--menu-->
             <div class="nav-main__btn-collapse-bg"></div>
-            <div class="nav-main__menu">
+            <div class="nav-main__menu d-flex justify-space-between">
+            <div class="pb-1">
+            <div class="text-center pb-2 ">
+              <%= link_to  "timer", root_path, class:"text-center cursor-pointer link-title" %>
+            </div>
               <a href="" class="link-item">
-                <%= button_to image_tag('TIMER.svg'), root_path, method: :get,class:"button-styles cursor-pointer"%>
-              </a>
-              <a href="" class="link-item d-flex">
-                <%= button_to image_tag('dashboard.svg')+ "Dashboard", root_path, method: :get,class:"buttonselected cursor-pointer d-flex gap-1 justify-space-between"%>
-              </a>
-              <a href="" class="link-item">
-                <%= button_to image_tag('employee.svg')+ "New Employee", new_dashboard_employee_path	, method: :get,class:"button-styles cursor-pointer d-flex gap-1 justify-space-between"%>
+                <%= button_to image_tag('dashboard.svg')+ "Dashboard", root_path, method: :get,class:"buttonselected link-dashboard cursor-pointer d-flex gap-1 justify-space-between mb-1"%>
               </a>
               <a href="" class="link-item">
-                <%= button_to image_tag('department.svg')+ "Stores", new_dashboard_store_path	, method: :get,class:"button-styles cursor-pointer d-flex justify-space-between"%>
+                <%= button_to image_tag('employee.svg')+ "New Employee", new_dashboard_employee_path	, method: :get,class:"button-styles link-dashboard cursor-pointer d-flex gap-1 justify-space-between mb-1"%>
               </a>
               <a href="" class="link-item">
-                <%= button_to image_tag('log_out.svg')+ "Log out", destroy_admin_session_path, method: :delete,class:"button-styles cursor-pointer d-flex"%>
+                <%= button_to image_tag('department.svg')+ "Stores", new_dashboard_store_path	, method: :get,class:"button-styles link-dashboard cursor-pointer d-flex justify-space-between mb-1"%>
               </a>
-              <div class="footer_desk__link-item">
-                <%= image_tag 'credits.svg', class:"footer_desk"%>
+              <a href="" class="link-item">
+                <%= button_to image_tag('log_out.svg')+ "Log out", destroy_admin_session_path, method: :delete,class:"button-styles link-dashboard cursor-pointer d-flex mb-1"%>
+              </a>
+            </div>
+            <div>
+              <div class="footer_desk__link-item mt-5">
+                 <div class="footer_desk__link-item--credits">
+                  <p class="text-center mb-1">Development by:</p>
+                  <div class="text-center">
+                    <p>Edwards Michel</p>
+                    <p>Diego Larios</p>
+                    <p>Ever Ponce</p>
+                  </div>
+                </div>
               </div>
-              <div class="footer_desk__link-item">
+              <div class="footer_desk__link-item mb-7">
                 <%= image_tag 'BC.svg', class:"footer_desk"%>
               </div>
+            </div>
             </div>
             <!--foto de perfil-->
             <div class="profilebox">
