--- a/app/assets/stylesheets/layouts/_navbar_dashboard_mobile.scss
+++ b/app/assets/stylesheets/layouts/_navbar_dashboard_mobile.scss
@@ -136,4 +136,43 @@
         transform: scaleY(0);
         transform: scaleX(0);
     }
+    .container-d {
+        padding-top: 10px;
+        display: flex;
+        justify-content: center;
+        color: rgb(5, 5, 5);
+        &__numberd {
+            background-color: #ffffff;
+            margin-right: 15px;
+            font-family: var(--font-family-share-tech);
+            .number-clock-d {
+                font-size: 20px;
+            }
+            .number-date-d {
+                top: 20px;
+                font-size: 20px;
+                padding-left: 9rem;
+            }
+        }
+    }
+    .number-colon-d {
+        margin-right: 15px;
+        font-size: 17px;
+        top: 10px;
+    }
+    .clock {
+        background-color: #ffffff;
+        border-color: #ffffff;
+        border-right: #ffffff;
+        border-bottom: #ffffff;
+        height: 25px;
+        width: 20px;
+    }
+    .link-title {
+        padding-right: 20rem;
+        text-transform: uppercase;
+        color: black;
+        font-weight: 600;
+        font-size: 20px;
+    }
 }
