--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,10 +1,8 @@
 .all-employee {
     font-family: var(--font-family-manrope);
-
     @media only screen and (max-width: 500px) {
         min-width: 334px;
     }
-
     &__title {
         color: var(--color-text-body);
         font-size: 18px;
@@ -13,7 +11,6 @@
         line-height: 32px;
         margin: 2rem 0;
     }
-
     &__table {
         border-collapse: collapse;
         table-layout: fixed;
@@ -21,7 +18,6 @@
         overflow-x: auto;
         white-space: nowrap;
         font-size: 12px;
-
         thead th {
             color: hsla(0, 0%, 30%, 1);
             font-size: 12px;
@@ -29,11 +25,9 @@
             font-weight: 500;
             line-height: 16px;
         }
-
         tbody tr {
             border-bottom: 1pt solid #f2f2f2;
             font-family: var(--font-family-manrope);
-
             td {
                 color: hsla(0, 0%, 50%, 1);
                 font-size: 12px;
@@ -42,7 +36,6 @@
                 text-align: center;
                 vertical-align: middle;
                 align-items: center;
-
                 a {
                     color: hsla(0, 0%, 50%, 1);
                     font-style: normal;
@@ -63,14 +56,12 @@
     line-height: 14px;
     padding: 0px;
     width: 380px;
-
     a,
     span {
         color: #9e9898;
         font-size: 12px;
         margin: 0 5px;
     }
-
     .page {
         a {
             padding: 0px 3px 0 6px;
@@ -79,16 +70,13 @@
             height: 40px;
         }
     }
-
     .current {
         padding: 0px 6px 0 6px;
         color: green;
     }
-
     &__nums {
         div {
             margin: 0 4px;
-
             p {}
         }
     }
@@ -182,35 +170,28 @@
         display: flex;
         flex-direction: row;
     }
-
     .card-report-style {
         padding: 16px 20px;
         width: 350px;
         height: 140px;
         border-radius: 10px;
-
         .active {
             color: #ff5151;
         }
-
         .absent {
             color: #3786f1;
         }
-
         .darys {
             color: #ee61cf;
         }
     }
-
     &__attended-by-day {
         background: #ffefe7;
         letter-spacing: 0.3px;
         margin-bottom: 1rem;
-
         @media only screen and (min-width: 600px) {
             margin-right: 1rem;
         }
-
         &--title {
             font-family: var(--font-family-sans);
             font-style: normal;
@@ -219,21 +200,18 @@
             line-height: 24px;
             color: hsla(232, 58%, 21%, 1);
         }
-
         &--num-day {
             font-weight: 500;
             font-size: 32px;
             color: hsla(232, 58%, 21%, 1);
             text-align: center;
         }
-
         &--style {
             font-family: var(--font-family-roboto);
             font-size: 12px;
             text-align: center;
         }
     }
-
     &__average-by-month {
         background: #ffefe7;
         padding: 12px 20px;
@@ -242,12 +220,10 @@
         border-radius: 10px;
         background: #e8f0fb;
         margin-bottom: 1rem;
-
         @media only screen and (min-width: 600px) {
             margin-right: 1rem;
         }
     }
-
     &__absence-by-month {
         background: #ffefe7;
         padding: 12px 20px;
@@ -261,14 +237,13 @@
 
 .content-dashboard {
     @media (min-width: 501px) {
+        top: -50px;
         margin-left: 2rem;
         left: 257px;
         position: relative;
     }
-
     margin-left: 13px;
     margin-right: 13px;
-
     h2 {
         font-family: var(--font-family-poppins);
         font-style: normal;
@@ -281,7 +256,6 @@
 
 .footer {
     transform: scaleY(0);
-
     @media (max-width: 500px) {
         align-items: center;
         transform: scaleY(1);
@@ -293,7 +267,6 @@
 
 .link-dashboard {
     margin-left: 1rem;
-
     img {
         margin-right: 1rem;
     }
