--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,4 +30,6 @@
 @import "pages/home_index";
 @import "pages/dashboard";
 @import "pages/sign_in_devise";
-@import "pages/sign_in_devise_movil"
+@import "pages/sign_in_devise_movil";
+@import "pages/new_store_form";
+@import "pages/new_store_form_mobile";
