--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -74,7 +74,7 @@
         <% @employees.each do |employee| %>
           <tr class="mt-1">
             <td>
-              <%# <%= employee.id %>
+              <%= employee.id %>
             </td>
             <td class="d-flex">
               <img src=<%= employee.avatar.url(:width=>32, :crop=>"fill") %> class="image-profile mr-1">
@@ -102,5 +102,3 @@
       </div>
       <%= image_tag("Footer.png", :alt => "Braightcoders", class:"footer") %>
       </div>
-
-      
