fix imports in aplicacion.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,6 @@
 @import "pages/dashboard";
 @import "pages/sign_in_devise";
 @import "pages/sign_in_devise_movil";
-@import "pages/show_employee"
+@import "pages/show_employee";
 @import "pages/new_store_form";
 @import "pages/new_store_form_mobile";
